fixed layout issue in work-epxeirnece column

--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -35,8 +35,14 @@ section {
     
     ul.experience-list{
         display: flex;
-        justify-content: space-between;
+        // flex-direction: column;
+        justify-content: space-evenly;
 
+        @media only screen and (max-width: 800px) {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            }
     }
     
     .contact-align {
